--- a/index.htm
+++ b/index.htm
@@ -22,7 +22,7 @@
 
 <body>
     <header>
-        <img src="img/heading.jpg" alt="image ">
+        <img src="img/heading 2.png" alt="image ">
     </header>
     <main>
         <form action="/" method="get" id="add-item">
